primera version se modifica formulario

--- a/index.html
+++ b/index.html
@@ -619,6 +619,9 @@
 
             </div>
 
+            <!-- no borrar o se rompe todo -->
+            <div id="form"  class="asd"></div>
+
         </section>
 
 
@@ -632,7 +635,7 @@
                     Contacto<span class="span__dot">.</span>
                 </h2>
 
-                <form id="form" class="formulario">
+                <form class="formulario" action="https://formsubmit.co/aad2abac044ea567a855fc6279b805e5" method="POST">
 
                     <div class="label__imput">
                         <label for="nombre"><i class='bx bxs-user'></i></label>
